[package]
name = "yansongda-utils"
authors = ["yansongda <me@yansongda.cn>"]
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "rust 中一些关于我自己的常用工具"
repository = "https://github.com/yansongda/rust-utils"

[dependencies]
regex = { version = "~1.7.0" }
serde = { version = "~1.0.130", features = ["derive"] }
once_cell = { version = "~1.17.0" }