[package]
name = "yansongda-utils"
authors = ["yansongda <me@yansongda.cn>"]
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "rust 中一些关于我自己的常用工具"
repository = "https://github.com/yansongda/rust-utils"

[package.metadata.docs.rs]
features = ["macros", "phone"]

[dependencies]
regex = { version = "~1.8.4", optional = true }
serde = { version = "~1.0.130", features = ["derive"], optional = true }
once_cell = { version = "~1.17.0", optional = true }

[dev-dependencies]
serde_json = { version = "~1.0.92" }

[features]
macros = ["regex", "once_cell"]
phone = ["macros", "serde"]