[package]
name = "yansongda-utils"
authors = ["yansongda <me@yansongda.cn>"]
version = "1.0.2"
edition = "2021"
license = "MIT"
description = "rust 中一些关于我自己的常用工具"
repository = "https://github.com/yansongda/rust-utils"

[package.metadata.docs.rs]
features = ["macros", "phone"]

[dependencies]
regex = { version = "~1.10.0", optional = true }
serde = { version = "~1.0.130", features = ["derive"], optional = true }

[dev-dependencies]
regex = { version = "~1.10.0" }
serde_json = { version = "~1.0.92" }

[features]
macros = ["regex"]
phone = ["macros", "serde"]